syntax = "proto3";

package virtengine.epochs.v1beta1;

option go_package = "github.com/virtengine/virtengine/sdk/go/node/epochs/v1beta1";

// EventEpochEnd is an event emitted when an epoch end.
message EventEpochEnd {
  int64 epoch_number = 1;
}

// EventEpochStart is an event emitted when an epoch start.
message EventEpochStart {
  int64 epoch_number     = 1;
  int64 epoch_start_time = 2;
}
